--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,16 @@
+body{
+  font-family: 'Roboto', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background: #e8e8e8;
+}
+
+nav{
+  margin: 0;
+  padding: 0;
+}
+
 .buttons {
   display: flex;
   gap: 10px;
@@ -16,4 +29,8 @@ legend {
 
 picture source, picture img{
   width: 3rem;
+}
+
+card:hover {
+  transform: scale(1.04);
 }
