--- a/src/index.css
+++ b/src/index.css
@@ -1,22 +1,14 @@
-body {
+body, nav {
   background: #e8e8e8;
 }
 
-.video-container {
+video {
   position: absolute;
+  left: 0;
+  top: 0;
+  min-width: 100vw;
+  height: 100%;
   z-index: -1;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: calc(100vw * 0.5625);
-  overflow: hidden;
-}
-
-.video-container video {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100vw;
 }
 
 .buttons {
