--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,3 @@
-body, nav {
-  background: #e8e8e8;
-}
-
-video {
-  position: absolute;
-  left: 0;
-  top: 0;
-  min-width: 100vw;
-  height: 100%;
-  z-index: -1;
-}
-
 .buttons {
   display: flex;
   gap: 10px;
@@ -32,6 +19,9 @@ picture img {
   width: 3rem;
 }
 
-card:hover {
+div.card{
+  transition: transform 0.3s;
+}
+div.card:hover {
   transform: scale(1.04);
 }
