--- a/src/pages/layout/layout.css
+++ b/src/pages/layout/layout.css
@@ -1,13 +1,21 @@
 .grid-area-admin{
     display: grid;
-    grid-template-columns: 250px 1fr 1fr;
-    grid-template-rows: 60px;
-    min-height: 100vh;
-    min-width: 100vw;
+    grid-template-columns: auto 1fr 1fr;
+    grid-template-rows: auto 1fr auto;
+    min-width: 100%;
+    min-height: 100%;
+    max-height: 100vh;
+    max-width: 100vw;
     grid-template-areas:
     "header header header"
     "sidebar content content"
-    "sidebar footer footer"
+    "sidebar footer footer";
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    scrollbar-width: none;
 }
 
 .grid-area-admin nav{
@@ -23,6 +31,10 @@
 .grid-area-admin main{
     background: #efefef50;
     grid-area: content;
+    margin: 0 auto;
+    width: 100%;
+    overflow: scroll;
+    scrollbar-width: none;
 }
 
 .grid-area-admin footer{
